# PDS_Project

./: .gitignore  Cargo.toml  README.md
settings/: settings
src/: cursor_scaling.rs  hotkey_popup.rs  image_proc.rs  load_assets.rs  load_fonts.rs  main.rs  main_window.rs  screensh.rs
src/image_proc/: blur_area.rs  colors.rs  extensions.rs  image_errors.rs  layer.rs  polygon.rs  shape.rs
src/load_fonts/: font_errors.rs
src/main_window/: crop_win.rs  draw_win.rs  hidden_win.rs  image_win.rs  initial_win.rs  settings_win.rs  text_win.rs
src/screensh/: screensh_errors.rs
