[package]
name = "screenshot_utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
egui = "0.22.0"
global-hotkey = "0.2.3"
home = "0.5.5"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
screenshots = "0.7.0"
thiserror = "1.0.44"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
