[package]
name = "screen-capture-utility"
version = "0.1.0"
edition = "2021"
authors = ["Cappello Alessio", "Carena Simone", "Cavallotti Edoardo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
eframe = "0.22.0"
global-hotkey = "0.2.3"
home = "0.5.5"
image = "0.24.6"
imageproc = "0.23.0"
keyboard-types = "0.6.2"
rusttype = "0.9.3"
screenshots = "0.7.0"
thiserror = "1.0.44"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

